--- a/ecommerceTSXClass/package.json
+++ b/ecommerceTSXClass/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@types/node": "^18.7.8",
+    "@types/webpack-env": "^1.18.0",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "primeicons": "^5.0.0",
     "primereact": "^8.3.0",
     "react": "^18.2.0",
@@ -17,13 +20,14 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "sass": "^1.54.5",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "vite-plugin-commonjs": "^0.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
     "typescript": "^4.6.4",
-    "vite": "^3.0.7"
+    "vite": "^3.0.9"
   }
 }
