--- a/ecommerceTSXClass/package.json
+++ b/ecommerceTSXClass/package.json
@@ -13,11 +13,13 @@
     "@types/node": "^18.7.8",
     "@types/webpack-env": "^1.18.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "array.prototype.fill": "^1.0.2",
+    "core-js": "^3.25.0",
     "primeicons": "^5.0.0",
     "primereact": "^8.3.0",
     "react": "^18.2.0",
+    "react-app-polyfill": "^3.0.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "sass": "^1.54.5",
     "scss": "^0.2.4",
