--- a/package.json
+++ b/package.json
@@ -1,12 +1,35 @@
 {
-  "name": "ecommerceClassComponents_React_TSX",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/foxsnow38/ecommerceClassComponents_React_TSX.git",
-  "author": "foxsnow38 <31081148+foxsnow38@users.noreply.github.com>",
-  "license": "MIT",
+  "name": "ecommercetsxclass",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "cd ecommerceTSXClass && yarn build",
-    "dev": "cd ecommerceTSXClass && yarn dev"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
+    "@types/node": "^18.7.8",
+    "@types/webpack-env": "^1.18.0",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "array.prototype.fill": "^1.0.2",
+    "core-js": "^3.25.0",
+    "primeicons": "^5.0.0",
+    "primereact": "^8.3.0",
+    "react": "^18.2.0",
+    "react-app-polyfill": "^3.0.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
+    "sass": "^1.54.5",
+    "scss": "^0.2.4",
+    "vite-plugin-commonjs": "^0.5.2"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.0.1",
+    "typescript": "^4.6.4",
+    "vite": "^3.0.9"
   }
 }
