--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "types": [ "node", "webpack-env" ],
-    "typeRoots": ["./node_modules/@types"]
+    "typeRoots": ["./node_modules/@types"],
+    "forceConsistentCasingInFileNames": false,
     
   },
   "include": ["src"],
